crates/plotnik-lib/tests/03-analyze/duplicates/duplicate_capture_in_node.txt
Q = (node
  (a) @x
  (b) @x
)
==== diagnostics ====
error: capture `@x` already defined in this scope
 --> query.ptk:3:3
  |
3 |   (b) @x
  |   ^^^^^^
  |
help: rename one capture, or use a labeled alternation if they are mutually exclusive branches
==== symbols ====
Q
